<resources>
    <string name="app_name">Supermercadov2</string>
    <string name="btnLogin">Iniciar Sesión</string>
    <string name="btnRegister">Registrarse</string>
    <string name="login_success">Inicio de sesión exitoso</string>
    <string name="intentos_agotados">Número de intentos agotado</string>
    <string name="dialog_title_failure">Intento fallido</string>
    <string name="dialog_message_invalid_credentials">Credenciales no válidas. Intentos restantes:</string>
    <string name="hint_username">Usuario</string>
    <string name="hint_password">Contraseña</string>
    <string name="registration_success">Registro exitoso</string>
    <string name="fill_all_fields">Completa todos los campos</string>
    <string name="edtName">Nombre</string>
    <string name="edtLastName">Apellido</string>
    <string name="edtEmail">Correo Electrónico</string>
    <string name="welcome_message">"Bienvenido, "</string>
    <string name="btnAgregarSupermercado">Agregar Supermercado</string>
    <string name="edtNombreProducto">Nombre del producto</string>
    <string name="edtPrecioProducto">Precio del producto</string>
    <string name="btnAgregar">Agregar</string>
    <string name="btnCancelar">Cancelar</string>
    <string name="completar_campos">Por favor, complete todos los campos</string>
    <string name="edtNombreSupermercado">Nombre del supermercado</string>
    <string name="edtLocalizacionSupermercado">Localización</string>
    <string name="producto_de">Productos de</string>
    <string name="error_maps">Error al abrir Google Maps</string>
    <string name="change_language">Cambiar idioma</string>
    <string name="select_language">Elegir idioma</string>
    <array name="language_options">
        <item>Castellano</item>
        <item>English</item>
        <item>Français</item>
    </array>
    <string name="agregar_notas">Agregar Nota</string>
    <string name="guardar_nota">Guardar nota</string>
    <string name="message_alert">Mensaje de alerta</string>
    <string name="noti_de">Notificación de</string>
    <string name="change_color">Cambiar el color</string>
    <string name="select_color">Selecciona un color</string>
    <array name="colorOptions">
        <item>Estilo 1</item>
        <item>Estilo 2</item>
        <item>Estilo 3</item>
    </array>
    <string name="add_product">Añadir Producto</string>
    <string name="go">Ir</string>
    <string name="username_exist">El nombre de usuario ya está registrado</string>
    <string name="supermarket_exists">El supermercado ya existe en la base de datos</string>
    <string name="modify_precio">Modificar precio</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="product_exists">El producto ya existe en el supermercado</string>
    <string name="no_notes">No hay notas para este supermercado</string>
    <string name="see_notes">Ver Notas</string>
    <string name="open_maps">Abrir Maps</string>
    <string name="sacar_foto">Sacar foto</string>
    <string name="mostrar_fotos">Mostrar fotos</string>
    <string name="eliminar_imagen">Eliminar imagen</string>
</resources>