<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edtNombreSupermercado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtNombreSupermercado"
        android:inputType="text" />

    <EditText
        android:id="@+id/edtLocalizacionSupermercado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edtLocalizacionSupermercado"
        android:inputType="text" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btnAgregarSupermercado"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnAgregar" />

        <Button
            android:id="@+id/btnCancelar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCancelar" />
    </LinearLayout>

</LinearLayout>