<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpcionesEnSupermercado">

    <Button
        android:id="@+id/btnSacarFoto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sacar_foto"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="80dp"/>

    <Button
        android:id="@+id/btnMostrarFotos"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mostrar_fotos"
        app:layout_constraintTop_toBottomOf="@+id/btnSacarFoto"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="30dp" />

    <Button
        android:id="@+id/btnCalculateDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go"
        app:layout_constraintTop_toBottomOf="@+id/btnMostrarFotos"
        app:layout_constraintStart_toStartOf="@+id/btnMostrarFotos"
        app:layout_constraintEnd_toEndOf="@+id/btnMostrarFotos"
        android:layout_marginTop="30dp"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/btnEliminarImagen"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eliminar_imagen"
        app:layout_constraintTop_toBottomOf="@+id/btnCalculateDistance"
        app:layout_constraintStart_toStartOf="@+id/btnCalculateDistance"
        app:layout_constraintEnd_toEndOf="@+id/btnCalculateDistance"
        android:layout_marginTop="30dp"
        app:layout_constraintVertical_chainStyle="packed"/>


</androidx.constraintlayout.widget.ConstraintLayout>



